# BUPT-PASCC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  demo.pas  run.sh  test.sh  test1.sh
.github/workflows/: cmake-multi-platform.yml
error_set/: 0_program_head.pas  1_const_decl.pas  2_var_decl.pas  3_compound__stmt.pas  4_expression.pas  5_typo_error.pas  6_function_error.pas  7_procedure_error.pas  8_multi_error.pas
hidden_set/: 00_comment2.pas  01_multiple_returns.pas  02_branch.pas  03_param_name.pas  04_func_name.pas  05_arr_init_nd.pas  06_global_arr_init.pas  07_BST.out  07_BST.pas  08_dp.pas  09_graph_coloring.pas  10_k_smallest.pas  11_maximal_clique.pas  12_prim.pas  13_sort.in  13_sort.pas  14_union_find.pas  15_matrix_multiply.out  15_matrix_multiply.pas  16_side_effect2.pas  17_long_line.pas  18_many_indirections.pas  19_many_params3.pas  20_multi_branch.pas  21_multi_loop.pas  22_math.in  22_math.out  22_math.pas  23_dct.in  23_dct.out  23_dct.pas  24_fp_params.out  24_fp_params.pas
judge/: judge.py
open_set/: 00_main.s  00_main_fpc  00_main_gcc  01_var_defn2_fpc  01_var_defn2_gcc  02_var_defn3_fpc  02_var_defn3_gcc  03_arr_defn2_fpc  03_arr_defn2_gcc  04_const_var_defn2.pas  16_mod.pas  18_if_test3.pas  19_if_test4.pas  25_op_priority3.pas  33_if_complex_expr.pas  37_sort_test1.pas  38_sort_test4.pas  39_sort_test6.pas  46_full_conn.out  46_full_conn.pas  48_n_queens.pas  50_side_effect.pas  55_long_array2.pas  57_many_params.pas  65_float.out  65_float.pas  66_matrix_add.pas  67_matrix_sub.pas  68_matrix_mul.pas  69_matrix_tran.pas
riscv-target/: CMakeLists.txt  Makefile  a+b.s  gen_asm.py  hello.s  print_num.s
src/: main.cpp
src/ast/: stmt.cpp  stmt.hpp  stmt_test.cpp  stmt_test.hpp  visitor.hpp
src/builder/: builder.hpp  c_builder.cpp  c_builder.hpp
src/builder/c/: c_builder.cpp  c_builder.hpp
src/builder/riscv/: builder.cpp  builder.hpp  instruction.cpp  instruction.hpp  operand.cpp  operand.hpp
src/common/exception/: exception.hpp
src/common/log/: log.cpp  log.hpp
src/common/setting/: settings.cpp  settings.hpp
src/common/thpool/: thpool.cpp  thpool.hpp
src/ir/: ir.cpp  ir.hpp  ir_gen.cpp  ir_gen.hpp  visitor.hpp
src/opt/: const_expr.cpp  const_expr.hpp  opt.hpp
src/parser/: gen_parser.sh  lex_pascal.cpp  lex_pascal.hpp  lex_pascal.l  stmt.hpp  yacc_pascal.cpp  yacc_pascal.hpp  yacc_pascal.y  yacc_pascal.y.bak  yacc_pascal_copy.y
src/token/: token.cpp  token.hpp
test/bison_test/: CMakeLists.txt  main.cpp  todo.y
test/ir_test/: CMakeLists.txt  main.cpp  run.sh  test.py
test/token_test/: CMakeLists.txt  lex_pascal.l  lex_pascal_use_for_bison.l  main.cpp
编译器1/: 使用说明.txt
编译器1/可执行程序/: input.pas
编译器1/测试用例/功能测试/: example02.pas
编译器1/测试用例/错误测试/integrated_test/: input01.pas  input02.pas  input03.pas
编译器1/测试用例/错误测试/unit_test/: input01.pas  input03.pas  input04.pas  input05.pas  input06.pas  input07.pas  input08.pas  input09.pas  input10.pas  input11.pas  input12.pas  input13.pas  input14.pas  input15.pas  input16.pas  input17.pas  input18.pas  input19.pas  input20.pas  input21.pas  input22.pas  input23.pas  input24.pas  input25.pas  input26.pas  input27.pas  input28.pas  input29.pas  input30.pas  input31.pas  input32.pas  input33.pas  input34.pas  input35.pas  input36.pas  input37.pas  input38.pas  input39.pas  input40.pas  input41.pas  (+7 more)
编译器1/测试用例/错误测试/unit_test/err_lex/: input01.pas  input02.pas  input03.pas  input04.pas  input05.pas
编译器1/源程序/include/: parser.tab.h
编译器1/源程序/scripts/: input.pas  out.c
编译器1/源程序/src/: lex.yy.cc  parser.tab.cc
