cmake_minimum_required(VERSION 3.10)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_EXPORT_COMPILECOMMANDS ON)

project(PASCC)

set(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)

SET(MAIN_SRC ${PROJECT_SOURCE_DIR}/src/main.cpp)

SET(LIBEVENT_STATIC_LINK TRUE)

SET(pthread)
# 指定文件输出位置
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
MESSAGE(STATUS "PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR})
set(SRC_PATH ${PROJECT_SOURCE_DIR}/src)
MESSAGE(STATUS "SRC_PATH: " ${SRC_PATH})

ADD_EXECUTABLE(pascc ${SRC_FILES} ${MAIN_SRC})